--- a/src/components/styles/prefecture-list.module.css
+++ b/src/components/styles/prefecture-list.module.css
@@ -16,6 +16,10 @@
   margin-right: 0.25rem;
 }
 
+.prefectureItem label {
+  cursor: pointer;
+}
+
 @media (max-width: 48rem) {
   .prefectureList {
     grid-template-columns: repeat(auto-fill, minmax(6.25rem, 1fr));
